# phishmonger

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  renovate.json  test-lurelist.html  vite.config.ts  wrangler.jsonc
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.2-MILESTONE-AUDIT.md
.planning/debug/: layout-collapse-diagnosis.md  layout-collapse-root-cause.md  save-to-campaign-empties-campaign.md  test-campaign-fix.js  verification-steps.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: check-version.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AnnotationPanel.tsx  Editor.tsx  HTMLInput.tsx  LureList.tsx  ModeToggle.tsx  Preview.tsx  ProjectSettings.tsx  ScoringPanel.tsx
src/data/: persuasion.json  sampleCampaign.json  sampleCampaign.ts  techniques.json
src/extensions/: LureMark.ts
src/hooks/: useArrowCalculations.ts  useCampaigns.ts  useCardLayout.ts  useCustomTechniques.ts  useDebouncedResize.ts  useUndoRedo.ts
src/styles/: arrows.module.css  layouts.module.css
src/types/: annotations.ts  campaign.ts  columns.ts  index.ts  library.ts  phish.ts  project.ts  scoring.ts
src/utils/: export.ts  (+8 more)
(+224 files in other folders)
