[package]
name = "phishmonger"
version = "1.4.1"
description = "PhishMonger - Annotate phishing emails with technique explanations"
authors = ["zarguell"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[[bin]]
name = "phishmonger"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
